--- a/client/public/assets/i18n/common/tr.json
+++ b/client/public/assets/i18n/common/tr.json
@@ -1,24 +1,36 @@
 {
 	"product": "Ürün",
-	"signin": "Sign In",
-	"signup": "Sign Up",
-	"login": "Login",
-	"register": "Register",
-	"addbasket": "Add To Basket",
-	"password": "password",
-	"email": "email",
-	"logout": "LogOut",
-	"confirmpassword": "Confirm passsword",
-	"signupgoogle": "Sign Up with Google",
-	"or": "Or",
-	"home": "Home",
-	"order": "Order",
-	"user": "User",
-	"addres": "Addres",
+	"signin": "Giriş Yap",
+	"signup": "Kaydol",
+	"login": "Giriş",
+	"register": "Kaydol",
+	"addbasket": "Sepete Ekle",
+	"removebasket": "Sepeten Çıkar",
+	"password": "Şifre",
+	"email": "Mail",
+	"logout": "Çıkış",
+	"confirmpassword": "Şifre Yenile",
+	"signupgoogle": "Google ile Giiriş Yap",
+	"or": "Veya",
+	"home": "Ana Sayfa",
+	"order": "Şipariş",
+	"user": "Kullanıcı",
+	"addres": "Adres",
 	"item": "Item",
-	"title": "Title",
-	"price": "Price",
-	"createdtime": "Created Time",
-	"action": "Action",
-	"profile": "Profile"
+	"title": "Başlık",
+	"price": "Fiyat",
+	"createdtime": "OLuşturulma Zamanı",
+	"action": "Aksiyon",
+	"profile": "Profil",
+	"delete":"Sil",
+    "edit":"Düzenle",
+    "yes":"Evet",
+    "no":"Hayır",
+	"areyousure":"Emin misin?",
+	"english":"İngilizce",
+	"turkish":"Türkçe",
+	"ordertable":"Şipariş Tablosu",
+	"loadingpage":"Sayfa Yükle",
+	"loadingmore":"Daha fazla Yükle",
+	"nothingmoreload":"Yüklenecek Öğe Yok"
 }
